# doc-to-abstract

./: .env.example  .gitignore  README.md  doc-to-abstract.example.yaml  pyproject.toml
doc_to_abstract/: client.py  config.py  exceptions.py  latex.py  main.py  prompt.py  server.py  template.py
prompts/: system_prompt.txt
